move counter out of main panel. Change border colour on first beat

--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@
             </select>
             <span id="tempo-value">at 120 bpm</span>
         </div>
-        <label id="beat-counter" class="label counter">1</label>
     </div>
 
     <input id="tempo" value="120" type="range" min="0" max="300" >
@@ -70,6 +69,9 @@
                 <option value="sawtooth">Sawtooth</option>
             </select>
         </div>
+    </section>
+    <section class="counter-wrapper">
+        <label id="beat-counter" class="label counter">1</label>
     </section>
 
     <footer>
